Add ajax calls on change of option

--- a/app/views/products/_dropdown_variants_by_option_cart.html.erb
+++ b/app/views/products/_dropdown_variants_by_option_cart.html.erb
@@ -11,33 +11,42 @@
   <% end %>
 
   <% if @product.has_variants? %>
-    <div id="product-variants">
+    <div id="product-variant-values">
       <% hook :dropdown_variants_by_option_cart_variants do %>
         <h2><%= t('variants') %></h2>
         <ul>
-          <% @product.option_types.each do |option_type|
-            if option_type.display_as_dropdown
-          %>
-              <li>
-                <%= option_type.presentation %><br/>
-                <%= select_tag "option_types[#{option_type.id}]", options_from_collection_for_select(instock_option_values(@product, option_type), :id, :presentation) %>
-              </li>
-            <% else %>
-              <li>
-                <%= option_type.presentation %><br/>
-
-              <% instock_option_values(@product, option_type).each_with_index do |option_value, index| %>
-                <li>
-                  <%= radio_button_tag "option_types[#{option_type.id}]", option_value.id, (index < 1) %>
-                  <span class="variant-description">
-                    <%= option_value.presentation %>
-                  </span>
-                </li>
+          <% selected_option_values = Array.new %>
+          <% @product.option_types.each do |option_type| %>
+            <li>
+              <%= option_type.presentation %><br/>
+              <% option_values = instock_option_values(@product, option_type) %>
+              <% if option_values.empty? %>
+                <%= t('out_of_stock') %>
+              <% else %>
+                <% selected_option_values << option_values.first.id %>
+                <% if option_type.display_as_dropdown %>
+                  <%= select_tag "option_values[#{option_type.id}]",
+                    options_from_collection_for_select(option_values, :id, :presentation, option_values.first.id), 
+                    {:id => :option_values_dropdown,
+                      :onchange => remote_function(
+                        :with => 'Form.serialize(this.form)',
+                        :url => { :action => 'option_value_changed', :id => @product})} %>
+                <% else %>
+                  <% option_values.each_with_index do |option_value, index| %>
+                    <li>
+                      <%= radio_button_tag "option_values[#{option_type.id}]", 
+                        option_value.id, option_value.id == option_values.first.id %>
+                      <span class="variant-description">
+                        <%= option_value.presentation %>
+                      </span>
+                    </li>
+                  <% end %>
+                <% end %>
               <% end %>
-              </li>
-            <% end %>
-         <% end %>
+            </li>
+          <% end %>
         </ul>
+        <%= hidden_field_tag :selected_variant_id, Variant.find_by_option_values(@product.id, selected_option_values).try(:id) %>
       <% end %>
     </div>
   <% end%>
