Get hover over thumbnails working after replace_html call

--- a/app/views/products/_dropdown_variants_by_option_cart.html.erb
+++ b/app/views/products/_dropdown_variants_by_option_cart.html.erb
@@ -1,5 +1,4 @@
   <% hook :dropdown_variants_by_option_cart_product do %>
-
     <% if product_price(@product) %>
       <% hook :product_price do %>
         <p class="prices">
@@ -67,4 +66,16 @@
     <% else %>
       <%= content_tag('strong', t('out_of_stock')) %>
     <% end %>
+  <% end %>
+
+  <% content_for :head do %>
+    <script type="text/javascript" charset="utf-8">
+      var images = new Array();
+      <% @variants.each do |v| %>
+        images[<%= v.id.to_s %>] = new Array();
+        <% v.images.each_with_index do |image, i| %>
+          images[<%= v.id.to_s %>][<%= i %>] = <%= link_to(image_tag(image.attachment.url(:mini)), image.attachment.url(:product)).to_json %>;
+        <% end %>
+      <% end %>
+    </script>
   <% end %>
