Convert to pure jquery rather than using jrails

--- a/app/views/products/_cart_form.html.erb
+++ b/app/views/products/_cart_form.html.erb
@@ -24,13 +24,7 @@
             <% @product.option_types.each do |option_type| %>
               <li>
                 <%= option_type.presentation %><br/>
-                <% option_values = instock_option_values(@product, option_type)
-                  onchange = remote_function(
-                          :with => 'Form.serialize(this.form)',
-                          :complete => "jQuery('#busy_indicator').hide();",
-                          :before => "jQuery('#busy_indicator').show();",
-                          :url => { :action => 'option_value_changed', :id => @product})
-                %>
+                <% option_values = instock_option_values(@product, option_type) %>
                 <% if option_values.empty? %>
                   <%= t('out_of_stock') %>
                 <% else %>
@@ -38,14 +32,16 @@
                     <%= select_tag "option_values[#{option_type.id}]",
                       options_from_collection_for_select(option_values, :id, :presentation,
                       @selected_variant ? @selected_variant.option_values.find_by_option_type_id(option_type.id).try(:id) : option_values.first.id),
-                      { :onchange => onchange } %>
+                      :id => 'option_values_select'
+                    %>
                   <% else %>
                     <% option_values.each_with_index do |option_value, index| %>
                       <li>
                         <%= radio_button_tag "option_values[#{option_type.id}]",
                           option_value.id,
                           @selected_variant ? option_value.id == @selected_variant.option_values.find_by_option_type_id(option_type.id).try(:id) : option_value.id == option_values.first.id,
-                          { :onchange => onchange } %>
+                          :id => 'option_values_radio'
+                        %>
                         <span class="variant-description">
                           <%= option_value.presentation %>
                         </span>
