Refactor to use the concept of a primary option type that controls what values are displayed for other option types linked to the prodyct

--- a/app/views/products/_cart_form.html.erb
+++ b/app/views/products/_cart_form.html.erb
@@ -21,36 +21,13 @@
           <%= hidden_field_tag 'product_id', @product.id %>
           <h2><%= t('variants') %></h2>
           <ul>
-            <% @product.option_types.each do |option_type| %>
-              <li>
-                <%= option_type.presentation %><br/>
-                <% option_values = instock_option_values(@product, option_type) %>
-                <% if option_values.empty? %>
-                  <%= t('out_of_stock') %>
-                <% else %>
-                  <% if option_type.display_as_dropdown %>
-                    <%= select_tag "option_values[#{option_type.id}]",
-                      options_from_collection_for_select(option_values, :id, :presentation,
-                      @selected_variant ? @selected_variant.option_values.find_by_option_type_id(option_type.id).try(:id) : option_values.first.id),
-                      :id => 'option_values_select'
-                    %>
-                  <% else %>
-                    <% option_values.each_with_index do |option_value, index| %>
-                      <li>
-                        <%= radio_button_tag "option_values[#{option_type.id}]",
-                          option_value.id,
-                          @selected_variant ? option_value.id == @selected_variant.option_values.find_by_option_type_id(option_type.id).try(:id) : option_value.id == option_values.first.id,
-                          :id => 'option_values_radio'
-                        %>
-                        <span class="variant-description">
-                          <%= option_value.presentation %>
-                        </span>
-                      </li>
-                    <% end %>
-                  <% end %>
-                <% end %>
-              </li>
-            <% end %>
+            <% primary_option_type = @product.option_types.primary.first %>
+            <div id="primary_option_types">
+              <%= render :partial => 'option_type', :locals => {:option_type => primary_option_type} %>
+            </div>
+            <div id="not_primary_option_types">
+              <%= render :partial => 'option_type', :collection => @product.option_types.not_primary %>
+            </div>
           </ul>
         <% end %>
       </div>
